--- a/server/package.json
+++ b/server/package.json
@@ -17,5 +17,10 @@
     "nodemon": "^3.1.4",
     "tslint": "^6.1.3",
     "typescript": "^5.5.2"
+  },
+  "dependencies": {
+    "@types/express": "^4.17.21",
+    "express": "^4.19.2",
+    "socket.io": "^4.7.5"
   }
 }
