--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,9 @@
   },
   "dependencies": {
     "@types/express": "^4.17.21",
+    "@types/uuid": "^10.0.0",
     "express": "^4.19.2",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "uuid": "^10.0.0"
   }
 }
